--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scroll-slider",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Scroll Slider",
   "main": "dest/ScrollSlider.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.0",
     "pump": "^3.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "ts-loader": "^6.2.1",
